<resources>
    <string name="app_version">1.6-RC2</string>
    <string name="app_name">Tigase Messenger</string>
    <string name="pingServer">Ping</string>
    <string name="auth_rerequested">Rerequested authorization from %1$s (%2$s)</string>
    <string name="auth_removed">Removed authorization from %1$s (%2$s)</string>
    <string name="auth_resent">Sent authorization to %1$s (%2$s)</string>
    <string name="contact_edit">Edit</string>
    <string name="contact_remove">Remove</string>
    <string name="contact_start_chat">Chat with</string>
    <string name="contact_add">Add</string>
    <string name="contact_editor">Edit contact</string>
    <string name="contact_details">Contact details</string>
    <string name="pref_entertosend_summary">If checked, then Enter will send your message</string>
    <string name="pref_entertosend_title">Enter to send</string>
    <string name="pref_autostart_title">Autostart</string>
    <string name="pref_autostart_summary">Connects after phone starts</string>
    <string name="showChatsButton">Show chats</string>
    <string name="chat_list_title">Active chats</string>
    <string name="loginButton">Connect</string>
    <string name="logoutButton">Disconnect</string>
    <string name="propertiesButton">Settings</string>
    <string name="preferencesTitle">Settings</string>
    <string name="closeChatButton">Close chat</string>
    <string name="shareButton">Share</string>
    <string name="shareImageButton">Photo</string>
    <string name="shareVideoButton">Video</string>
    <string name="chatSendButton">Send</string>
    <string name="aboutButton">About</string>
    <string name="termsOfService">Terms</string>
    <string name="termsOfServiceURL">http://www.sure.im/terms.txt</string>
    <string name="privacyPolicy">Privacy</string>
    <string name="privacyPolicyURL">http://www.sure.im/privacy.txt</string>
    <string name="pref_login_section_title">Login data</string>
    <string name="pref_login_section_summary">Data needed to login to XMPP server</string>
    <string name="pref_advanced_section_title">Advanced settings</string>
    <string name="pref_advanced_section_summary">Advanced settings</string>
    <string name="pref_default_priority_summary">Online priority is %1$s</string>
    <string name="pref_default_priority_title">Online priority</string>
    <string name="pref_default_priority_dialog">Enter online priority</string>
    <string name="pref_auto_away_priority_summary">Auto away priority is %1$s</string>
    <string name="pref_auto_away_priority_title">Auto away priority</string>
    <string name="pref_auto_away_priority_dialog">Enter auto away priority</string>
    <string name="pref_keepalive_time_summary">Keep alive timeout is %1$s minutes</string>
    <string name="pref_keepalive_time_title">Keep alive timeout</string>
    <string name="pref_keepalive_time_dialog">Enter keep alive timeout</string>
    <string name="pref_reconnect_time_summary">Client will wait %1$s sec between reconnects</string>
    <string name="pref_reconnect_time_title">Reconnect delay</string>
    <string name="pref_reconnect_time_dialog">Enter reconnect delay</string>
    <string name="pref_login_ui_section_title">User Interface</string>
    <string name="pref_login_notifications_section_title">Notifications</string>
    <string name="pref_notification_sound_title">Sound</string>
    <string name="pref_notification_vibrate_title">Vibrate</string>
    <string name="pref_notification_sound_muc_title">MUC mention sound</string>
    <string name="pref_notification_sound_chat_title">Chat message sound</string>
    <string name="pref_notification_advanced_section_title">Advanced</string>
    <string name="account_add_welcome">Join Tigase</string>
    <string name="account_add_login">I have an account</string>
    <string name="account_add_description">Hello world</string>
    <string name="account_add_create">Create a new account</string>
    <string name="account_dialog_enter_details">Enter details of your XMPP account</string>
    <string name="account_dialog_username_hint">User name</string>
    <string name="account_dialog_hostname_hint">Server name</string>
    <string name="account_dialog_password_hint">Password</string>
    <string name="account_dialog_password_confirm_hint">Confirm password</string>
    <string name="account_dialog_resource_hint">Client description</string>
    <string name="account_dialog_resource_default">Tigase Messenger</string>
    <string name="account_dialog_alternative_hostname_hint">Optional server address</string>
    <string name="account_dialog_nickname_hint">Optional nickname</string>
    <string name="account_dialog_email_hint">Optional e-mail address</string>
    <string name="label">Tigase XMPP</string>
    <string name="ui_authenticator_activity_title">Sign-in</string>
    <string name="ui_activity_authenticating">Authenticating\u2026</string>
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. XMPP account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_newaccount_text">Sign in to your XMPP account. </string>
    <string name="vcard_editor_activity_title">Personal information</string>
    <string name="accountVCard">Personal information</string>
    <string name="vcard_fullname">Full name</string>
    <string name="vcard_nickname">Nick</string>
    <string name="vcard_email">Email</string>
    <string name="vcard_birthday">Birthday</string>
    <string name="vcard_homepage">Homepage</string>
    <string name="vcard_phone">Phone</string>
    <string name="vcard_subscription">Subscription</string>
    <string name="vcard_jabberid">Refresh</string>
    <string name="vcard_editor_refresh">Refresh</string>
    <string name="vcard_editor_publish">Publish</string>
    <string name="vcard_published_toast">Informations published</string>
    <string name="vcard_timeout_toast">Operation timed out</string>
    <string name="vcard_error_toast">Operation failed</string>
    <string name="vcard_retrieving">Loading. Please wait…</string>
    <string name="vcard_publishing">Publishing. Please wait…</string>
    <string name="incoming_file">Incoming file</string>
    <string name="incoming_file_from">Incoming file from</string>
    <string name="incoming_file_filename">Name</string>
    <string name="incoming_file_mimetype">Kind</string>
    <string name="incoming_file_filesize">Size</string>
    <string name="incoming_file_description">Description</string>
    <string name="incoming_file_store">Save file to</string>
    <string name="avatar">Avatar</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="account_advanced_preferences">More settings…</string>
    <string name="mobile_optimizations_not_supported">Your server doesn\'t support this… try Tigase - sure.im, jabber.me, tigase.im</string>
    <string name="mobile_optimizations">Mobile optimizations</string>
    <string name="presence_queue_max_timeout">Maximum presence queue timeout</string>
    <string name="auth_request_info">This user wants to subscribe to your presence.</string>
    <string name="geolocation_listen">Receive geolocation</string>
    <string name="geolocation_publish">Publish location</string>
    <string name="geolocation_precision">Location precision</string>
    <string name="geolocation_show">Geolocation</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="auth_request_cant_deny">Can\'t deny subscription</string>
    <string name="auth_request_cant_accept">Can\'t accept subscription</string>
    <string name="contact_edit_wrn_jid_cant_be_empty">JID can\'t be empty</string>
    <string name="contact_edit_wrn_wrong_jid">Wrong JabberID</string>
    <string name="contact_edit_wrn_name_cant_be_empty">Name can\'t be empty</string>
    <string name="contact_edit_wrn_unkown">unkown</string>
    <string name="contact_edit_wrn_timeout">Timeout</string>
    <string name="contact_edit_info_updating">Updating. Please wait...</string>
    <string name="contact_edit_jabberid">JabberID</string>
    <string name="contact_edit_name">Name</string>
    <string name="contact_edit_group">Group</string>
    <string name="contact_edit_request_authorization">Request authorization</string>
    <string name="chat_item_info_timestampt">Timestamp</string>
    <string name="chat_item_info_state">State</string>
    <string name="chat_item_info_chat_with">Chat with</string>
    <string name="service_invalid_jid_or_password_info">Invalid JID or password (%s)</string>
    <string name="service_invalid_jid_or_password">Invalid JID or password</string>
    <string name="service_invalid_password">Invalid password for %s</string>
    <string name="service_incoming_file_notification_title">Incoming file %1$s from %2$s</string>
    <string name="service_incoming_file_notification_text"></string>
    <string name="service_error_notification_title">Error</string>
    <string name="service_disconnected_notification_title">Disconnected</string>
    <string name="service_no_network_notification_text">Disconnected</string>
    <string name="service_connecting_notification_title">Connecting</string>
    <string name="service_connecting_notification_text">Connecting %d accounts...</string>
    <string name="service_connected_notification_title">Connected</string>
    <string name="service_online_notification_text">Online</string>
    <string name="service_no_active_accounts_notification_text">No active accounts!</string>
    <string name="service_file_transfer_sending_file">Sending file %1$s to %2$s</string>
    <string name="service_file_transfer_receiving_file">Receiving file %1$s from %2$s</string>
    <string name="service_file_transfer_negotiating">negotiating...</string>
    <string name="service_file_transfer_connecting">connecting...</string>
    <string name="service_file_transfer_error">connection failed</string>
    <string name="service_file_transfer_progress">progress %1$s</string>
    <string name="service_file_transfer_finished">transfer finished</string>
    <string name="service_unkown_host_error">Connection error: Unkown host %s</string>
    <string name="service_authentication_request_notification_title">Authentication request: %s</string>
    <string name="service_authentication_request_notification_text">Authentication request</string>
    <string name="service_too_many_errors_disabled">Too many connection errors. Account disabled.</string>
    <string name="service_message_from_notification_title">Message from %s</string>
    <string name="service_new_message">New message</string>
    <string name="service_mentioned_you_in_message">%s mentioned you</string>
    <string name="join_muc_room">Join conference</string>
    <string name="muc_occupants_list_title">Occupants</string>
    <string name="bookmarks_show">Bookmarks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="service_warning_notification_title">Warning</string>
    <string name="trustcert_dialog_title">Certificate untrusted</string>
    <string name="trustcert_question">Is this certificate trusted:\n%s</string>
    <string name="trustcert_fingerprint">"Fingerprint (SHA-1): %s"</string>
    <string name="trustcert_certchain">Certificate [%s]:</string>
    <string name="trustcert_subject">Subject: %s</string>
	<string name="pref_chat_state_enabled_summary">Receive and send notification about chat state</string>
	<string name="pref_chat_state_enabled_title">Chat state notification</string>
</resources>