<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/closeChatButton"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom"
        android:title="@string/closeChatButton">
    </item>
    <item
        android:id="@+id/shareButton"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"        
        android:title="@string/shareButton">
        <menu>
    		<item
        		android:id="@+id/shareImageButton"
        		android:icon="@android:drawable/ic_menu_gallery"
        		android:title="@string/shareImageButton">
    		</item>
    		<item
        		android:id="@+id/shareVideoButton"
        		android:icon="@android:drawable/ic_menu_slideshow"
        		android:title="@string/shareVideoButton">
    		</item>
    	</menu>
    </item>
    <item
        android:id="@+id/showChatsButton"
        android:icon="@drawable/ic_menu_chatswitch"
        android:showAsAction="ifRoom"
        android:title="@string/showChatsButton">
    </item>

</menu>