<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5px" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout1"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="5px" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_dialog_enter_details" />

            <EditText
                android:id="@+id/newAccountUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_dialog_username_hint"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/newAccountHostnameSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/free_account_hostnames" />

            <EditText
                android:id="@+id/newAccountHostnameSelectorEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/account_dialog_hostname_hint"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/newAccountPassowrd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_dialog_password_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newAccountResource"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_dialog_resource_hint"
                android:inputType="textNoSuggestions"
                android:text="@string/account_dialog_resource_default" />

            <View
                android:id="@+id/view_separator"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:background="@color/account_dialog_separator" />

            <EditText
                android:id="@+id/newAccountHostname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_dialog_alternative_hostname_hint"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/newAccountNickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_dialog_nickname_hint"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center" >

        <Button
            android:id="@+id/newAccountAddButton"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/newAccountcancelButton"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/newAccountAddButton"
            android:text="@string/cancel" />
    </RelativeLayout>

</RelativeLayout>