<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:orientation="vertical"
    android:padding="10dp" >

    <CheckBox
        android:id="@+id/mobile_optimizations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.09"
        android:minHeight="40dp"
        android:text="@string/mobile_optimizations" />

    <TextView 
        android:text="@string/presence_queue_max_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/presence_queue_timeout"
        android:prompt="@string/presence_queue_max_timeout"
        android:entries="@array/presence_queue_timeout"
        android:minHeight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.09" >        
    </Spinner>

    <CheckBox
        android:id="@+id/geolocation_listen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.09"
        android:text="@string/geolocation_listen" />
    
    <CheckBox
        android:id="@+id/geolocation_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.09"
        android:text="@string/geolocation_publish" />

    <TextView 
        android:text="@string/geolocation_precision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/geolocation_percision"
        android:prompt="@string/geolocation_precision"
        android:entries="@array/geolocation_precision"
        android:minHeight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.09" >        
    </Spinner>
    
</LinearLayout>