<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="2px" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/vcard_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:src="@drawable/user_avatar" />

        <TextView
            android:id="@+id/vcard_fn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/vcard_avatar"
            android:padding="3dip"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vcard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/vcard_fn"
            android:layout_below="@+id/vcard_fn"
            android:padding="3dip"
            android:singleLine="true" />

        <TextView
            android:id="@+id/vcard_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/vcard_title"
            android:layout_below="@+id/vcard_title"
            android:padding="3dip"
            android:singleLine="true" />
    </RelativeLayout>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/relativeLayout1" >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/vcard_jabberid" />

            <TextView
                android:id="@+id/vcard_jid"
                android:padding="3dip"
                android:singleLine="true"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:id="@+id/vcard_subscription_status_row" >

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/vcard_subscription" />

            <TextView
                android:id="@+id/vcard_subscription_status"
                android:padding="3dip"
                android:singleLine="true"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/vcard_nickname"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/vcard_nickname"
                android:padding="3dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="Birthday:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/vcard_bday"
                android:padding="3dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/vcard_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/vcard_home_tel_voice"
                android:autoLink="all"
                android:padding="3dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/vcard_homepage"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/vcard_url"
                android:autoLink="all"
                android:padding="3dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/vcard_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/vcard_home_mail"
                android:autoLink="all"
                android:padding="3dip"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</RelativeLayout>